moved nav z-index to 100, fixed bug

--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ body {
   bottom: 2rem;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 5;
+  z-index: 100;
   user-select: none;
 }
 
@@ -126,6 +126,26 @@ body {
 .btn:hover {
   cursor: pointer;
   background-color: rgba(255,255,255,0.5);
+}
+
+#nextBtn {
+  background-color: rgba(31,31,31, 1);
+  color: rgba(255,255,255, 1);
+  font-weight: 700;
+  border: none;
+  margin: 0 0.25rem;
+  padding: 1rem;
+  border-radius: 50%;
+  padding: 10px;
+  margin: 0;
+  box-shadow: 6px 0px 5px 1px rgba(0, 0, 0, .30);
+  z-index: 100;
+}
+
+#nextBtn:hover {
+  cursor: pointer;
+  background-color: rgba(255,255,255,0.5);
+  
 }
 
 .size-input {
